added support for custom filters
- first_upper - make first letter uppercase
- first_lower - make first letter lowercase

--- a/examples/angular/controller.js.jinja
+++ b/examples/angular/controller.js.jinja
@@ -2,5 +2,5 @@
   function {{name|capitalize}}Controller() {}
 
   angular.module('{{constants.module}}')
-    .controller('{{name|capitalize}}Controller', {{name|capitalize}}Controller);
+    .controller('{{name|first_upper}}Controller', {{name|capitalize}}Controller);
 })();
